# medgemma_chat

./: .dockerignore  .env.recommended  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile.client  Dockerfile.server  Procfile.dev  QUICKSTART_LM_STUDIO.md  README.md  env.example  env.recommended  env.template  launch_a2a_agents.py  pyproject.toml  start_server.sh  test_a2a_sdk.py  test_models_direct.py
client/: index.html  script.js  style.css
docs/: ANALYSIS_REPORT.md  COMPARISON_SIMULATED_VS_SDK.md  DETAILED_INDEX.md  EXECUTIVE_SUMMARY.md  README_A2A_SDK.md  SDK_MIGRATION_GUIDE.md  docs.md
docs/architecture/: agents.md  overview.md
docs/deployment/: docker.md
docs/development/: creating-agents.md
docs/getting-started/: configuration.md  installation.md  lm-studio.md  quick-start.md
server/: a2a_layer.py  config.py  main.py  schemas.py
server/a2a_services/: clinical_service.py  medgemma_service.py  router_service.py
server/agent_cards/: clinical.json  medgemma.json  router.json
server/agent_configs/: clinical.yaml  medical.yaml  router.yaml
server/agents/: fhir_agent.py  local_datastore_agent.py  medgemma_agent.py  user_proxy_agent.py
server/sdk_agents/: __init__.py  base_agent.py  clinical_agent.py  clinical_executor.py  clinical_server.py  medgemma_agent.py  medgemma_executor.py  medgemma_server.py  medical_executor.py  medical_server.py  react_router_executor.py  router_agent.py  router_executor.py  router_server.py
server/services/: __init__.py  concept_extractor.py  embedding_service.py  hybrid_rag.py  vector_db_manager.py
tests/: README.md  run_tests.sh  test_a2a_sdk.py  test_models_direct.py  test_react_orchestrator.py
web/: vite.config.ts
web/src/: App.svelte  styles.css
