[tool.poetry]
name = "medgemma-chat"
version = "0.1.0"
description = "Multi-model chat application with Phi-3 and MedGemma models optimized for Apple Silicon"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "^2.0.0"
transformers = "^4.50.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
accelerate = "^0.26.0"
pydantic = "^2.0.0"
python-multipart = "^0.0.6"
numpy = "^1.24.0"
huggingface-hub = {extras = ["cli"], version = "^0.26.0"}
pillow = "^10.0.0"
psutil = "^5.9.0"  # For system memory monitoring
# flash-attn removed due to compatibility issues with Gemma models and Apple Silicon
optimum = {version = "^1.16.0", optional = true}
bitsandbytes = {version = "^0.42.0", optional = true}

[tool.poetry.extras]
performance = ["optimum", "bitsandbytes"]

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88