[tool.poetry]
name = "medgemma-chat"
version = "0.1.0"
description = "Multi-model chat application with Phi-3 and MedGemma models optimized for Apple Silicon"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "^2.0.0"
transformers = "^4.50.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
accelerate = "^0.26.0"
pydantic = "^2.0.0"
python-multipart = "^0.0.6"
numpy = "^1.24.0"
huggingface-hub = {extras = ["cli"], version = "^0.26.0"}
pillow = "^10.0.0"
psutil = "^5.9.0"
requests = "^2.32.0"
pyarrow = "^16.0.0"
python-dotenv = "^1.0.1"
PyHive = {version = "^0.7.0"}
thrift = "^0.20.0"
thrift_sasl = "^0.4.3"
pure-sasl = "^0.6.2"
python-a2a = "^0.1.0"
# Vector database and RAG dependencies
chromadb = "^0.4.24"
sentence-transformers = "^2.5.1"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.0"
pandas = "^2.0.0"
tqdm = "^4.66.0"
# flash-attn removed due to compatibility issues with Gemma models and Apple Silicon
optimum = {version = "^1.16.0", optional = true}
bitsandbytes = {version = "^0.42.0", optional = true}

[tool.poetry.extras]
performance = ["optimum", "bitsandbytes"]

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88